tests/frost/fail/e3b.mle
type bool = True | False
type pair a b = Pair of a, b

val poly : (forall a . a -> a) -> (int * bool)
val app : forall a b . (a -> b) -> a -> b
val id : forall a . a -> a

let infer = app (fun x -> poly x) id
